<resources>
    <string name="app_name">qa-android</string>
    <string name="dk_category_biz">业务专区</string>
    <string name="dk_category_tools">常用工具</string>
    <string name="dk_category_performance">性能监控</string>
    <string name="dk_category_ui">视觉工具</string>

    <string name="dk_kit_sysinfo">App信息</string>
    <string name="dk_kit_file_explorer">沙盒</string>
    <string name="dk_kit_frame_info">流畅度</string>
    <string name="dk_kit_frame_info_desc">帧率检测</string>
    <string name="dk_kit_gps_mock">位置模拟</string>
    <string name="dk_kit_color_picker">取色器</string>
    <string name="dk_kit_align_ruler">对齐标尺</string>
    <string name="dk_kit_log_info">日志查看</string>
    <string name="dk_kit_web_door">H5任意门</string>
    <string name="dk_kit_temporary_close">隐藏</string>
    <string name="dk_kit_crash">奔溃信息</string>
    <string name="dk_kit_data_clean">缓存清理</string>
    <string name="dk_kit_weak_network">模拟弱网</string>
    <string name="dk_kit_view_check">控件检查</string>
    <string name="dk_kit_animation_preview">动效预览</string>
    <string name="dk_kit_net_monitor">流量监控</string>
    <string name="dk_kit_time_counter">耗时</string>
    <string name="dk_kit_db_detail">数据库查看</string>
    <string name="dk_kit_top_activity">当前Activity</string>
    <string name="dk_kit_pkg_name">包名：</string>
    <string name="dk_kit_class_name">类名：</string>
    <string name="dk_kit_path_name">路径：</string>

    <string name="dk_kit_exit">退出</string>
    <string name="dk_kit_layout_border">布局边框</string>

    <string name="dk_sysinfo_device_info">手机信息</string>
    <string name="dk_sysinfo_app_info">App信息</string>
    <string name="dk_sysinfo_permission_info">权限信息</string>
    <string name="dk_sysinfo_permission_info_unreliable">权限信息 (App未做6.0权限适配，以下信息仅供参考)</string>
    <string name="dk_sysinfo_brand_and_model">手机型号</string>
    <string name="dk_sysinfo_android_version">系统版本</string>
    <string name="dk_sysinfo_package_name">包名</string>
    <string name="dk_sysinfo_package_version_name">应用版本名</string>
    <string name="dk_sysinfo_package_version_code">应用版本号</string>
    <string name="dk_sysinfo_package_min_sdk">最低系统版本号</string>
    <string name="dk_sysinfo_package_target_sdk">目标系统版本号</string>
    <string name="dk_sysinfo_ext_storage_free">sd卡剩余空间</string>
    <string name="dk_sysinfo_rom_free">系统剩余空间</string>
    <string name="dk_sysinfo_display_size">分辨率</string>
    <string name="dk_sysinfo_permission_location">地理位置权限</string>
    <string name="dk_sysinfo_permission_sdcard">磁盘权限</string>
    <string name="dk_sysinfo_permission_camera">拍照权限</string>
    <string name="dk_sysinfo_permission_record">麦克风权限</string>
    <string name="dk_sysinfo_permission_read_phone">设备信息权限</string>
    <string name="dk_sysinfo_permission_contact">通讯录权限</string>

    <string name="dk_frameinfo_fps">帧率</string>
    <string name="dk_frameinfo_cpu">CPU</string>
    <string name="dk_frameinfo_ram">内存</string>
    <string name="dk_frameinfo_custom">自定义</string>
    <string name="dk_frameinfo_infopanel">信息面板</string>
    <string name="dk_anr_info">Anr信息</string>
    <string name="dk_frameinfo_leakcanary">内存泄漏</string>
    <string name="dk_frameinfo_upstream">上行流量</string>
    <string name="dk_frameinfo_downstream">下行流量</string>
    <string name="dk_frameinfo_avg_value">平均值</string>

    <string name="dk_log_info_edt_hint">输入想要过滤的关键字</string>
    <string name="dk_log_info_verbose">Verbose</string>
    <string name="dk_log_info_debug">Debug</string>
    <string name="dk_log_info_info">Info</string>
    <string name="dk_log_info_warn">Warn</string>
    <string name="dk_log_info_error">Error</string>

    <string name="dk_web_door_hint">输入地址，点击按钮跳转</string>
    <string name="dk_web_door_explore">点击跳转</string>
    <string name="dk_web_door_clear_history">清空搜索历史</string>

    <string name="dk_gpsmock_open">开启模拟定位</string>
    <string name="dk_gpsmock_tv_location">模拟</string>
    <string name="dk_gpsmock_hint_latitude">输入纬度</string>
    <string name="dk_gpsmock_hint_longitude">输入经度</string>

    <string name="dk_kit_block_monitor">卡顿检测</string>
    <string name="dk_kit_block_monitor_list">卡顿列表</string>
    <string name="dk_kit_block_monitor_detail">卡顿详情</string>
    <string name="dk_item_block_switch">卡顿检测开关</string>
    <string name="dk_item_block_goto_list">查看卡顿记录</string>
    <string name="dk_item_block_mock">模拟卡顿</string>
    <string name="dk_cpu_memory_remind_user">抱歉，您当前系统版本高于8.0，由于谷歌权限收紧，只能用adb的方式获取性能分析的数据，请手机连接电脑并输入adb tcpip 5555以保证功能正常运行</string>
    <string name="dk_block_class_has_blocked">blocked %s ms</string>
    <string name="dk_block_notification_message">Click for more details</string>

    <string name="dk_crash_capture_tips">DoraemonKit正在为您记录Crash</string>
    <string name="dk_crash_capture_no_record">暂无crash记录</string>
    <string name="dk_crash_capture_switch">Crash日志收集开关</string>
    <string name="dk_crash_capture_clean_data">一键清理Crash日志</string>
    <string name="dk_crash_capture_summary_title">Crash日志列表</string>
    <string name="dk_crash_need_permission">请授权读写权限，避免crash文件丢失</string>

    <string name="dk_weak_network_switch">模拟弱网开关</string>
    <string name="dk_weak_network_off">断网</string>
    <string name="dk_weak_network_timeout">超时</string>
    <string name="dk_weak_network_speed_limit">限速</string>
    <string name="dk_weak_network_request_limit">请求限速：</string>
    <string name="dk_weak_network_response_limit">响应限速：</string>
    <string name="dk_weak_network_limit_message">请求限速会在上传时限速，响应限速会在下载时限速，0则不限速</string>
    <string name="dk_weak_network_speed_unit" translatable="false">K/s</string>

    //流量监控
    <string name="dk_kit_network_monitor">流量监控</string>
    <string name="dk_kit_network_monitor_detail">流量监测详情</string>
    <string name="dk_kit_network_filter_hint">支持筛选</string>
    <string name="dk_kit_network_time_format">%1$s 耗时:%2$s</string>

    <string name="dk_view_check_info_class">控件类型：%1$s</string>
    <string name="dk_view_check_info_id">控件ID：%1$s</string>
    <string name="dk_view_check_info_size">控件尺寸：宽%1$d，高%2$d</string>
    <string name="dk_view_check_info_desc">背景颜色：%1$s</string>
    <string name="dk_view_check_info_activity">当前Activity：%1$s</string>
    <string name="dk_view_check_info_fragment">可见Fragments：%1$s</string>

    <string name="dk_back">返回</string>

    <string name="dk_net_monitor_title_summary">流量监控摘要</string>
    <string name="dk_net_monitor_list">流量监控列表</string>
    <string name="dk_net_monitor_detection_switch">流量检测开关</string>
    <string name="dk_net_monitor_show_summary">显示流量监控详情</string>
    <string name="dk_network_detail_title_body">消息体</string>
    <string name="dk_network_detail_title_size">数据大小</string>
    <string name="dk_network_detail_title_url">链接</string>
    <string name="dk_network_detail_title_request_time">请求时间</string>
    <string name="dk_network_detail_title_response_time">响应时间</string>
    <string name="dk_network_detail_title_request_header">请求头</string>
    <string name="dk_network_detail_title_response_header">响应头</string>
    <string name="dk_network_detail_title_request_body">请求行</string>
    <string name="dk_network_detail_title_response_body">响应行</string>
    <string name="dk_network_request">请求</string>
    <string name="dk_network_response">响应</string>
    <string name="dk_network_summary_total_number_time_tips">总计已为您抓包</string>
    <string name="dk_network_summary_total_number">抓包数量</string>
    <string name="dk_network_summary_data_upload">数据上传</string>
    <string name="dk_network_summary_data_down">数据下载</string>
    <string name="dk_network_summary_http_method">HTTP方法</string>
    <string name="dk_network_summary_data_type">数据类型</string>
    <string name="dk_network_summary_total_time_default">0秒</string>
    <string name="dk_network_summary_total_time_second">%d秒</string>
    <string name="dk_network_summary_total_time_minute">%1$d分%2$d秒</string>
    <string name="dk_network_summary_total_time_hour">%1$d小时%2$d分</string>
    <string name="dk_network_summary_total_time_day">%1$d天%2$d小时</string>
    <string name="dk_network_get_method">GET</string>
    <string name="dk_network_post_method">POST</string>
    <string name="dk_network_method">Method</string>

    <string name="dk_cpu_detection_switch">CPU检测开关</string>
    <string name="dk_frameinfo_detection_switch">帧率检测开关</string>
    <string name="dk_cpu_title_cache_log">检测记录</string>
    <string name="dk_item_cache_log">查看检测记录</string>

    <string name="dk_ram_detection_switch">内存检测开关</string>
    <string name="dk_ram_detection_title">内存检测</string>
    <string name="dk_crash_capture_look">查看Crash日志</string>

    <string name="dk_float_permission_toast">需要打开悬浮窗权限才能正常使用</string>
    <string name="dk_gps_location_change_toast">地址变为: %1$s, %2$s</string>

    <string name="dk_layout_level">布局层级</string>

    <string name="dk_align_info_text">位置：左%1$d 右%2$d 上%3$d 下%4$d</string>

    <string name="dk_error_tips_permissions_less">请进行授权才可以使用该功能</string>
    //启动、跳转耗时
    <string name="dk_item_time_counter_switch">Activity跳转耗时</string>
    <string name="dk_item_time_goto_list">查看记录</string>
    <string name="dk_kit_block_time_counter_list">耗时列表</string>

    <string name="dk_submit">提交</string>
    <string name="dk_cancel">取消</string>
    <string name="dk_delete">删除</string>
    <string name="dk_db_tips_insert">添加</string>
    <string name="dk_success">成功</string>
    <string name="dk_fail">失败</string>
    <string name="dk_confirm">确认</string>
    <string name="dk_app_data_clean">确认要删除本地数据</string>
    <string name="dk_hint">提示</string>
    <string name="dk_share">分享</string>

    <string name="dk_platform_monitor_data_button">开始测试</string>
    <string name="dk_platform_monitor_data_button_stop">结束测试</string>
    <string name="dk_platform_monitor_view_stat_data">查看统计数据</string>
    <string name="dk_platform_monitor_page_data">页面数据</string>
    <string name="dk_log_text_loading">日志加载中...</string>
    <string name="dk_data_clean_toast">清除系统资料</string>

</resources>
