<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/log_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dk_color_FFFFFF"
        android:orientation="vertical">

        <EditText
            android:id="@+id/log_filter"
            style="@style/DK.Input"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/dk_log_filter_background"
            android:elevation="1dp"
            android:hint="@string/dk_log_info_edt_hint"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/verbose"
                style="@style/DK.RadioButton.Left"
                android:text="@string/dk_log_info_verbose" />

            <RadioButton
                android:id="@+id/debug"
                style="@style/DK.RadioButton"
                android:text="@string/dk_log_info_debug" />

            <RadioButton
                android:id="@+id/info"
                style="@style/DK.RadioButton"
                android:text="@string/dk_log_info_info" />

            <RadioButton
                android:id="@+id/warn"
                style="@style/DK.RadioButton"
                android:text="@string/dk_log_info_warn" />

            <RadioButton
                android:id="@+id/error"
                style="@style/DK.RadioButton.Right"
                android:text="@string/dk_log_info_error" />

        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/log_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="23dp"
            android:scrollbars="vertical"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>